--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -1,4 +1,4 @@
-@font-face { font-family: Delicious; src: url('vendor/ethnocentric-rg.ttf'); }
+@font-face { font-family: 'Ethnocentric'; src: url('vendor/fonts/ethnocentric-rg.ttf'); }
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
